--- a/style/core/_core.scss
+++ b/style/core/_core.scss
@@ -8,3 +8,7 @@ body {
     min-height: 99vh;
     font-family: -apple-system, system-ui, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
 }
+
+a {
+    color: $secondary;
+}
