--- a/style/index.scss
+++ b/style/index.scss
@@ -6,3 +6,5 @@
 @import './components/animate';
 @import './components/sketch';
 @import './components/transition';
+@import './components/masonry';
+@import './components/singleserie';
