--- a/style/components/_serie.scss
+++ b/style/components/_serie.scss
@@ -17,6 +17,9 @@
         font-size: 5rem;
         margin-bottom: 1.25rem;
         text-transform: capitalize;
+        @media #{$small-and-down} {
+            font-size: 4rem;
+        }
     }
     .serie__images{
         width: 100%;
@@ -57,6 +60,9 @@
         }
         &.--left{
             margin-left: auto;
+        }
+        @media #{$small-and-down} {
+            height: 100%;
         }
     }
 }
