--- a/style/components/_masonry.scss
+++ b/style/components/_masonry.scss
@@ -22,7 +22,7 @@
         margin-top: 0px;
         img{
             width: 100%;
-            padding-bottom: 50px;
+            margin-bottom: 50px;
         }
     }
 }
