--- a/style/components/_serie.scss
+++ b/style/components/_serie.scss
@@ -48,6 +48,9 @@
             display: flex;
             align-items: right;
             margin-bottom: 10px;
+            @media #{$small-and-down} {
+                display: block;
+            }
         }
     }
     .serie__image {
