--- a/style/core/_variables.scss
+++ b/style/core/_variables.scss
@@ -14,7 +14,7 @@ $medium-screen:             769px !default;
 $big-screen:                981px !default;
 $huge-screen:               1281px !default;
 
-$small-and-down:            "only screen and (max-width : #{$small-screen-down})" !default;
+$small-and-down:            "only screen and (max-width : #{$small-screen})" !default;
 $medium-and-down:           "only screen and (max-width : #{$medium-screen-down})" !default;
 $medium-only:               "only screen and (min-width : #{$small-screen}) and (max-width : #{$medium-screen-down})" !default;
 $medium-and-up:             "only screen and (min-width : #{$medium-screen})" !default;
