fonts, icon and description

--- a/style/index.scss
+++ b/style/index.scss
@@ -1,5 +1,6 @@
 @import './core/variables';
 @import './core/core';
+@import './core/icon';
 
 @import './components/hero';
 @import './components/serie';
@@ -8,3 +9,4 @@
 @import './components/transition';
 @import './components/masonry';
 @import './components/singleserie';
+@import './components/social';
