--- a/style/components/_serie.scss
+++ b/style/components/_serie.scss
@@ -1,71 +1,47 @@
-.serie{
-    min-height: 120px;
-    margin: 0px;
-    margin-top: 20px;
-    padding: 0 15px;
-    display: flex;
-    flex-direction: column;
+.serie {
+    column-count: 2;
+    column-gap: 0;
+    counter-reset: item-counter;
     cursor: pointer;
-    position: relative;
-    .serie__name{
-        margin: 0px;
-        margin-top: 20px;
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin-bottom: 0.5em;
-        text-align: center;
-        font-size: 5rem;
-        margin-bottom: 1.25rem;
-        text-transform: capitalize;
-        @media #{$small-and-down} {
-            font-size: 4rem;
+    .serie__image {
+        box-sizing: border-box;
+        break-inside: avoid;
+        padding: 0px;
+        counter-increment: item-counter;
+        position: relative;
+
+        img {
+            width: 100%;
         }
-    }
-    .serie__images{
-        width: 100%;
-        display: flex;
-        justify-content: space-evenly;
-        flex-flow: row wrap;
-        padding-top: 10px;
-        height: 100%;
-        flex-direction: row-reverse;
-        align-items: center;
-    }
-    .serie__primary, .serie__secondary{
-        display: flex;
-        height: 100%;
-        justify-content: center;
-        width:100%;
-        max-width: 400px;
-    }
-    .serie__primary{
-        justify-content: left;
-    }
-    .serie__secondary{
-        flex-direction: column;
-        justify-content: right;
-        & > div{
+
+        .serie__info {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            color: $white;
+            background: $hoverblack;
             display: flex;
-            align-items: right;
-            margin-bottom: 10px;
-            @media #{$small-and-down} {
-                display: block;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            will-change: opacity;
+            transition: opacity 1s;
+            h3{
+                padding: 0px;
+                font-size: 2.3rem;
+            }
+        }
+
+        &:hover {
+            .serie__info {
+                opacity: 1;
             }
         }
     }
-    .serie__image {
-        margin: 5px;
-        height: auto;
-        transition: filter 1s;
-        width: 100%;
-        &:hover{
-            filter: grayscale(100%)
-        }
-        &.--left{
-            margin-left: auto;
-        }
-        @media #{$small-and-down} {
-            height: 100%;
-        }
+    @media #{$small-and-down} {
+        column-count: 1;
     }
 }
