--- a/style/components/_singleserie.scss
+++ b/style/components/_singleserie.scss
@@ -1,9 +1,9 @@
 .singleserie{
     .singleserie_info{
         display: inline-block;
-        width: 45%;
-        padding: 100px 12px;
-        position: sticky;
+        width: 12%;
+        padding: 50px 30px;
+        position: absolute;
         top: 0px;
         #description h2{
             font-size: 20px;
