--- a/style/components/_social.scss
+++ b/style/components/_social.scss
@@ -6,7 +6,7 @@
         text-decoration: none;
         margin-right: 20px;
         &:hover{
-            color: darken( $primary, 1% )
+            color: darken( $secondary, 1% )
         }
     }
     @media #{$small-and-down} {
