--- a/style/core/_core.scss
+++ b/style/core/_core.scss
@@ -1,17 +1,34 @@
 body {
-    border: 25px solid $primary;
-    border-top: 0px;
-    border-width: 0 25px;
-    border-image: url($borderImage) 30 round;
-    padding: 20px;
+    padding: 0px;
     margin: 0px;
     min-height: 99vh;
+    background: $white;
     font-family: -apple-system, system-ui, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
     @media #{$small-and-down} {
         overflow-x: hidden;
+    }
+    .container{
+        display: block;
+        .images{
+            display: inline-flex;
+            width: 55%;
+            @media #{$big-and-down}{
+                width: 54%;
+            }
+            @media #{$medium-and-down} {
+                width: 90%;
+                display: block;
+                margin: auto;
+                margin-top: 50px;        
+            }
+        }
     }
 }
 
 a {
     color: $secondary;
+}
+
+.__noevent{
+    pointer-events: none;
 }
