--- a/style/index.scss
+++ b/style/index.scss
@@ -7,6 +7,8 @@
 @import './components/animate';
 @import './components/sketch';
 @import './components/transition';
-@import './components/masonry';
 @import './components/singleserie';
 @import './components/social';
+@import './components/menuwrapper';
+@import './components/carousel';
+@import './components/navbar';
