--- a/style/components/_carousel.scss
+++ b/style/components/_carousel.scss
@@ -1,13 +1,13 @@
 .carousel{
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 30%;
     margin: 0;
     z-index: 1;
     text-align: center;
     width: 70%;
-    height: 600px;
-    transform: translateX(-50%) translateY(-50%);
+    height: 100%;
+    transform: translateY(-50%);
     .swiper-container{
         height: 100%;
         img{
@@ -25,6 +25,28 @@
             .swiper-pagination-bullet-active{
                 background: $secondary;
             }
+        }
+    }
+    .swiper-slide{
+        display: flex;
+    }
+    @media #{$medium-and-down} {
+        left: 0px;
+        width: 100%;
+        top: 30%;
+        transform: none;
+        height: 700px;
+    }
+    @media #{$small-and-down} {
+        width: 100%;
+        position: relative;
+        display: block;
+        transform: none;
+        left: 0;
+        height: 70vh;
+        .swiper-container{
+            height: auto;
+            margin-bottom: 20px;
         }
     }
 }
