--- a/style/core/_icon.scss
+++ b/style/core/_icon.scss
@@ -1,36 +1,50 @@
 @font-face {
-    font-family: 'icomoon';
-    src:  url('/static/fonts/icomoon.eot');
-    src:  url('/static/fonts/icomoon.eot') format('embedded-opentype'),
-      url('/static/fonts/icomoon.ttf') format('truetype'),
-      url('/static/fonts/icomoon.woff') format('woff'),
-      url('/static/fonts/icomoon.svg') format('svg');
-    font-weight: normal;
-    font-style: normal;
-  }
-  
-  [class^="icon-"], [class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-  
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  .icon-dribbble:before {
-    content: "\e902";
-  }
-  .icon-instagram:before {
-    content: "\e900";
-  }
-  .icon-facebook:before {
-    content: "\e901";
-  }
-  
+  font-family: 'icomoon';
+  src:  url('/static/fonts/icomoon.eot?3ttaps');
+  src:  url('/static/fonts/icomoon.eot?3ttaps#iefix') format('embedded-opentype'),
+    url('/static/fonts/icomoon.ttf?3ttaps') format('truetype'),
+    url('/static/fonts/icomoon.woff?3ttaps') format('woff'),
+    url('/static/fonts/icomoon.svg?3ttaps#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-chevron-thin-left:before {
+  content: "\e905";
+}
+.icon-chevron-thin-right:before {
+  content: "\e903";
+}
+.icon-behance:before {
+  content: "\e904";
+}
+.icon-brand:before {
+  content: "\e904";
+}
+.icon-social:before {
+  content: "\e904";
+}
+.icon-dribbble:before {
+  content: "\e902";
+}
+.icon-instagram:before {
+  content: "\e900";
+}
+.icon-facebook:before {
+  content: "\e901";
+}
