--- a/style/components/_hero.scss
+++ b/style/components/_hero.scss
@@ -1,10 +1,9 @@
 .hero {
-    max-width: 44.125rem;
     padding: 0 1.875rem;
     margin-left: auto;
     margin-right: auto;
     display: inline-block;
-    width: 40%;
+    width: 30%;
     position: sticky;
     position: -webkit-sticky;
     top: 0;
@@ -38,6 +37,12 @@
         &:hover {
             color: $primary;
             background-color: $white;
+        }
+    }
+    @media #{$big-and-down}{
+        margin-top: 40px;
+        .title{
+            font-size: 5.25rem;
         }
     }
     @media #{$medium-and-down}{
