--- a/style/components/_hero.scss
+++ b/style/components/_hero.scss
@@ -1,3 +1,6 @@
+$duration: .20;
+$easing: ease-in-out;
+
 .hero {
     padding: 0 1.875rem;
     margin-left: auto;
@@ -15,8 +18,18 @@
     .title {
         font-weight: 800;
         letter-spacing: 0.25rem;
-        font-size: 6.25rem;
+        font-size: 4.25rem;
         color: $secondary;
+        position: relative;
+        margin-top: 150px;
+        &:before{
+            position: absolute;
+            content: '';
+            width: 200px;
+            height: 200px;
+            right: 0;
+            margin-top: -30%;
+        }
     }
     .description {
         font-weight: 600;
