--- a/style/core/_core.scss
+++ b/style/core/_core.scss
@@ -3,7 +3,7 @@ body {
     margin: 0px;
     min-height: 99vh;
     background: $white;
-    font-family: -apple-system, system-ui, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
+    font-family: 'Nunito', sans-serif;
     @media #{$small-and-down} {
         overflow-x: hidden;
     }
